tabs on mobile fix

--- a/app/styles/category-bio.scss
+++ b/app/styles/category-bio.scss
@@ -30,7 +30,7 @@
 					border-color: $navigation-font-color;
 					border-bottom: 3px solid;
 					margin: 0;
-					padding: 8px 35px 14px 0;
+					padding: 8px 20px 14px 0;
 				}
 				&.active, &:hover {
 					a {
